thesis: Fix some references fields

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -178,7 +178,7 @@
     title = {{CVE}-2012-0217},
     year = {2012},
     url={https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2012-0217},
-    urldate={16 September 2019}
+    urldate={2019-09-16}
 }
 
 @Online{Dunlap19,
@@ -188,7 +188,7 @@
     month = {June},
     url = {https://xenproject.org/2012/06/13/the-intel-sysret-privilege-escalation/},
     organization = {Xen Project},
-    urldate = {17 September 2019}
+    urldate = {2019-09-17}
 }
 
 @Online{SYSRETFreeBSD,
@@ -197,7 +197,7 @@
     year = {2012},
     month = {July},
     url={https://www.freebsd.org/security/advisories/FreeBSD-SA-12:04.sysret.asc},
-    urldate={17 September 2019}
+    urldate={2019-09-17}
 }
 
 @Online{SYSRETDebian,
@@ -206,7 +206,7 @@
     year = {2012},
     month = {July},
     url={https://www.debian.org/security/2012/dsa-2508},
-    urldate={17 September 2019}
+    urldate={2019-09-17}
 }
 
 @Online{SYSRETCert,
@@ -216,7 +216,7 @@
     year = {2012},
     month = {July},
     url={https://www.kb.cert.org/vuls/id/649219/},
-    urldate={17 September 2019}
+    urldate={2019-09-17}
 }
 
 @Online{SYSRETMicrosoft,
@@ -226,7 +226,7 @@
     year = {2012},
     month = {July},
     url={https://docs.microsoft.com/en-us/security-updates/SecurityBulletins/2012/ms12-042},
-    urldate={17 September 2019}
+    urldate={2019-09-17}
 }
 
 @book{Baier08,
@@ -522,7 +522,7 @@
     title = {RISC-V Formal Verification Framework},
     author = {Wolf, Clifford},
     url = {https://github.com/SymbioticEDA/riscv-formal},
-    urldate = {06 November 2019},
+    urldate = {2019-11-06},
 }
 
 @Online{Piano,
@@ -530,7 +530,7 @@
     author = {Regehr, John},
     date = {27 January 2011},
     url = {https://blog.regehr.org/archives/364},
-    urldate = {27 November 2019},
+    urldate = {2019-11-27},
 }
 
 @inproceedings{GordonKPGNR15,
