--- a/thesis/sections/conclusion.tex
+++ b/thesis/sections/conclusion.tex
@@ -3,7 +3,7 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-% TODO: Replace "requirements" with "objectives"
+\todo{Replace "requirements" with "objectives"}
 In this section, we will give a final summary of our work, draw conclusion in light of the requirements towards verification of specifications against higher level properties that were imposed both by us and \citeauthor{Reid17} in \cite{Reid17} and give an outlook for possible future work.
 
 Find an overview of this thesis as a whole in figure \ref{fig:overview}.
