--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -16,6 +16,7 @@
 \usepackage{rotating}
 \usepackage{pifont}
 \usepackage[backend=biber,style=alphabetic]{biblatex}
+\usepackage{todonotes}
 \usetikzlibrary{positioning,calc,graphs,shapes,arrows,decorations.markings,backgrounds,chains}
 
 \setlength{\grammarindent}{8em}
