--- a/thesis/sections/checking.tex
+++ b/thesis/sections/checking.tex
@@ -20,7 +20,7 @@ How do we refine the model and/or properties on a verification failure?
 \subsubsection{Properties}
 \label{sec:props}
 
-% TODO: Explain syntax and assumptions of \gls{ltl} properties
+\todo{Explain syntax and assumptions of \gls{ltl} properties}
 
 In the summary of section \ref{sec:ifc-model} we mentioned that there are some arguments to the information flow semantic functions in $ \I $ that are not used to determine the information flow label of some architectural word.
 These induce the first properties we will verify the MINRV8 architecture against.
@@ -29,7 +29,7 @@ Firstly, recall the definition of the LOAD and STORE semantics.
 The new tracking labels resulting from executing such an instruction solely depend on the labels of the word loaded or stored.
 What hasn't been used in the definition of information flow is the label of the target address of the memory operation.
 It is intuitive that the address does not influence the label of the information itself.
-% TODO: is security a good word?
+\todo{is security a good word?}
 However, this suggests that the labels of the address of the memory operation might be relevant for the security of architecture as a whole in another.
 This leads to the following property:
 \begin{enumerate}[label=\Roman*.,series=]
@@ -49,14 +49,14 @@ This leads to the following property:
     \end{lstlisting}
 \end{enumerate}
 
-% TODO: give intuition for both properties
+\todo{give intuition for both properties}
 
 Secondly, recall the definition of the semantics for \rv{Csrrs} or \rv{Csrrc}, respectively.
 These only propagate information flow tracking labels by assigning the constant labels of the \gls{csr} read to the respectively targeted register.
 We decided to model the labels of \glspl{csr} as constants because they control the state of the architecture and as such might be target of an attack.
 We labelled all \glspl{csr} as integrous and \gls{mstatus} as confidential.
 We decided to not label \gls{pmacfg} or \gls{pmpcfg} as confidential since it can be assumed that user mode must be able to know where memory regions are to operate correctly.
-% TODO: Phrase this better
+\todo{Phrase this better}
 Our architecture does not support virtual addresses, address translation or other similar concepts which might hide details of the memory settings from user mode leaving it without the need to know the details of memory settings.
 
 Coming back to the information flow semantics of \rv{Csrrs} and \rv{Csrrc}, notice that in the respective definition of the semantical functions the value the \glspl{csr} are written with is not used.
@@ -106,12 +106,12 @@ The domain of confidentiality has yet been left out so we will introduce one fin
     \end{lstlisting}
 \end{enumerate}
 
-% TODO: reflect removed properties MSTATUS_CONFIDENTIAL and MEMORY_OP_CONFIDENTIAL; why is it not sensible to control public input?
+\todo{reflect removed properties MSTATUS_CONFIDENTIAL and MEMORY_OP_CONFIDENTIAL; why is it not sensible to control public input?}
 
 \subsubsection{Mitigations \& Refinement}
 
-% TODO: Make sure this is mentioned in the introduction
-% TODO: Reflect goal of the thesis once it has been set up properly in the introduction
+\todo{Make sure this is mentioned in the introduction}
+\todo{Reflect goal of the thesis once it has been set up properly in the introduction}
 With these properties at hand we can introduce our approach to the verification-refinement loop that has been mentioned initially in section \ref{sec:introduction} as well as the introduction of this section and which is depicted in figure \ref{fig:ver-process}.
 Formal verification does not end when a verification procedure returns some result.
 If such a result happens to be a negative one, a formal verification researcher must be able to answer to questions:
@@ -123,7 +123,7 @@ If such a result happens to be a negative one, a formal verification researcher 
 \end{enumerate}
 
 In this thesis, the result of a failed attempt to verify the MINRV8 architecture against some property will be a counter-example trace including an initial state and a sequence of instructions finally leading to the violation of the given property.
-% TODO: Argue for why it is not sensible to verify our implementation of the specification
+\todo{Argue for why it is not sensible to verify our implementation of the specification}
 To answer question \ref{itm:counter-ex-validity}, we simply must inspect the trace at hand and verify whether all state transitions and variable changes are indeed valid in regard to the specification of MINRV8.
 If the answer to this question is no, the implementation has to be fixed accordingly and the proofs must be re-run.
 
@@ -144,7 +144,7 @@ We also will then verify the effectiveness of these rules by re-running the proo
     \label{fig:ver-process}
 \end{figure}
 
-% TODO: Use graphic
+\todo{Use graphic}
 \begin{figure}
     \includegraphics[width=\textwidth]{figures/properties.png}
 \end{figure}
