--- a/thesis/sections/related.tex
+++ b/thesis/sections/related.tex
@@ -47,7 +47,7 @@ The authors proposed a simple security policy involving two rules:
 Whereas the first can not be compared to the properties of this work meaningfully as executable memory is not modelled, the second comes remarkably close to the properties integrity property \ref{itm:prop-mem-i} which (in words of the authors of \cite{SuhLZD04}) states that no \enquote{spurios} value can be used as pointer.
 The exception of bound-checks is implicitly modelled by the \smv{SAN_ON_*} assumptions in section \ref{sec:results} which mandate from machine-mode to sanitize register of spurious values before using them.
 Such a sanitization might be implemented by boundary-checking.
-% TODO: Double check whether this actually is true
+\todo{Double check whether this actually is true}
 Recall that the security lattice continues to track data as malicious only if both sources of an operation are malicious.
 For example, comparing a value to a constant bound, loaded from trusted memory would set it to be trustworthy.
 
@@ -76,7 +76,7 @@ As opposed to formalize: \enquote{information from source $ X $ must not flow to
 
 In contrast to the work of this thesis, \citeauthor{KhakpourSD13} achieve to distinguish between multiple user-mode processes and in this way tackle a more broad problem.
 In our work, we only considered the scenario of user-mode attacking machine-mode and not user-mode attacking different user-mode processes.
-% TODO: mention in future work
+\todo{mention in future work}
 It would be an interesting line of research to add an \gls{mmu} to the model and extend the information flow properties accordingly.
 
 On the other hand, \citeauthor{KhakpourSD13} do not give any sense for what these properties actually achieve when it comes to security.
@@ -100,7 +100,7 @@ Coincidentally, the authors focus on the SYSRET vulnerability to the x86 archite
 Their goal is to prove the absence of SYSRET-like vulnerabilities which is expressed as the property: never can the processor be in privileged mode when at the same time the stack pointer, base pointer or instruction pointer are controlled by user-mode.
 
 In their methodology, the authors first identify a group of vulnerable instructions which might lead to such a state by being interrupted.
-% TODO: mention: only mode transition instructions
+\todo{mention: only mode transition instructions}
 They then modelled these instructions alongside with all state touched by these instructions.
 By sparsely constraining the initial state of the model they finally prove: for all initial states, there is no direct successor state where a general protection fault has been thrown and one of the stack, base or instruction pointers is controlled by user-mode.
 The authors claim that by the constraints chosen for the initial states of the model, these states actually embody an over-approximation of all reachable states of the x86 architecture.
