thesis: Add abstract and acknowledgements stubs

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -155,6 +155,14 @@
 \newpage
 
 \pagestyle{empty}
+\begin{abstract}
+    \input{preface/abstract.tex}
+\end{abstract}
+
+\input{preface/acknowledgements.tex}
+
+\newpage
+
 \tableofcontents
 
 \newpage
